--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -2,6 +2,12 @@
 spring.application.name=springBoot
 #server.port=88
 
+#logging
+logging.level.com.example.demo=debug
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+logging.pattern.console=[%clr(%d{M/d HH:mm.ss}){cyan}] %clr(${LOG_LEVEL_PATTERN}) %msg%n
+spring.jpa.show-sql=true
+
 #mysql setting
 spring.datasource.url=jdbc:mysql://localhost:3306/sys?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
