--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+buildscript {
+    ext { springBootVersion = '2.1.4.RELEASE' }
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.1.4.RELEASE'
 	id 'java'
@@ -28,4 +32,18 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile('javax.servlet:jstl')
     compile("org.apache.tomcat.embed:tomcat-embed-jasper")
+    
+    testCompile ("org.springframework.boot:spring-boot-starter-test:$springBootVersion") {
+        exclude group: 'com.vaadin.external.google'
+        exclude group:"org.slf4j"
+    }
+    
+    compile ("io.springfox:springfox-swagger2:2.9.2") {
+        exclude group:"org.slf4j"
+    }
+    compile 'io.springfox:springfox-swagger-ui:2.9.2'
+    
+    // https://mvnrepository.com/artifact/org.springframework/springloaded
+	compile group: 'org.springframework', name: 'springloaded', version: '1.2.8.RELEASE'
+    
 }
