--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 plugins {
 	id 'org.springframework.boot' version '2.1.4.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -25,8 +26,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+	providedCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile 'mysql:mysql-connector-java'
 	compile("org.springframework.boot:spring-boot-starter-web")
